--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,2 +1,6 @@
+EXTRA_DIST= 			   \
+	dtu-caesarcipher.gresource.xml    \
+	dtu-caesarcipher-application.ui \
+	words.txt
 
 -include $(top_srcdir)/git.mk
