--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -298,6 +298,11 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+EXTRA_DIST = \
+	dtu-caesarcipher.gresource.xml    \
+	dtu-caesarcipher-application.ui \
+	words.txt
+
 all: all-am
 
 .SUFFIXES:
